--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@ spring:
     console:
       enabled: true
   jpa:
+    defer-datasource-initialization: true
     hibernate:
       ddl-auto: create
-#    defer-datasource-initialization: true
     show-sql: true
     properties:
       hibernate:
