--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 
+# MVC
 spring.mvc.view.prefix= /WEB-INF/jsp/
 spring.mvc.view.suffix= .jsp
-logging.level.org.springframework= debug
+
+# Logging
+logging.level.org.springframework= info
+logging.level.com.example.springbootjpastudy= trace
